--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=server"
   },
+  "Swagger": {
+    "Enabled": true,
+    "Title": "ECommerce API",
+    "Version": "v1",
+    "Description": "API for ECommerce application"
+  },
   "Jwt": {
     "Key": "a-string-secret-at-least-256-bits-long",
     "Issuer": "http://localhost:5169/",
