--- a/Deploy/k8s/app/aspnet-app-deployment.yaml
+++ b/Deploy/k8s/app/aspnet-app-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: aspnet-app
-        image: registry.gitlab.com/your-username/your-project:latest # Update with your registry
+        image: registry.gitlab.com/bunlongchea/ecommerce-api:latest # Update with your registry
         ports:
         - containerPort: 8080
           name: http
@@ -73,7 +73,7 @@ metadata:
   labels:
     app: aspnet-app
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: aspnet-app
   ports:
@@ -106,7 +106,7 @@ data:
   # Base64 encoded: Server=mssql-service,1433;Database=Ecommerce;User Id=sa;Password=YourStrong@Password123!;TrustServerCertificate=True;
 
 ---
-# Ingress for external access (optional)
+# Ingress for external access
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -115,13 +115,24 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    # Cloudflare specific annotations
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+    # Add CORS headers for Swagger
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ecommerce.bunlong.site"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
+     # Force HTTPS redirect
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   tls:
   - hosts:
-    - yourdomain.com
-    secretName: aspnet-tls
+    - ecommerce.bunlong.site
+    secretName: aspnet-tls-secret
   rules:
-  - host: yourdomain.com
+  - host: ecommerce.bunlong.site
     http:
       paths:
       - path: /
