--- a/Deploy/k8s/cert/letsencrypt-clusterissuer.yaml
+++ b/Deploy/k8s/cert/letsencrypt-clusterissuer.yaml
@@ -3,6 +3,9 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
+  namespace: argocd  # ArgoCD will manage this
+  labels:
+    app.kubernetes.io/instance: aspnet-ecommerce
 spec:
   acme:
     # Let's Encrypt production server
