--- a/Deploy/k8s/app/aspnet-app-deployment.yaml
+++ b/Deploy/k8s/app/aspnet-app-deployment.yaml
@@ -114,23 +114,21 @@ metadata:
   namespace: production
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    # cert-manager.io/cluster-issuer: letsencrypt-prod
     # Cloudflare specific annotations
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     # Add CORS headers for Swagger
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ecommerce.bunlong.site"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "http://ecommerce.bunlong.site"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
-     # Force HTTPS redirect
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    # Force HTTPS redirect
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
-  tls:
-  - hosts:
-    - ecommerce.bunlong.site
-    secretName: aspnet-tls-secret
+  # For HTTP only
   rules:
   - host: ecommerce.bunlong.site
     http:
@@ -142,3 +140,19 @@ spec:
             name: aspnet-service
             port:
               number: 80
+# spec:
+#   tls:
+#   - hosts:
+#     - ecommerce.bunlong.site
+#     secretName: aspnet-tls-secret
+#   rules:
+#   - host: ecommerce.bunlong.site
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: aspnet-service
+#             port:
+#               number: 80
