--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=server"
+    "DefaultConnection": "Server=34.124.219.191,1433;Database=Ecommerce;User Id=sa;Password=YourStrong@Password123!;TrustServerCertificate=True"
   },
   "Swagger": {
     "Enabled": true,
